[tool.poetry]
name = "examples"
version = "1.0.0"
description = "Shell window examples"
authors = ["Noah Ablaseau <noaha@inmotionhosting.com>"]

[tool.poetry.dependencies]
python = "^3.10"
click = "^8.1.3"
numpy = "^1.23.0"

[tool.poetry.dev-dependencies]

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"
